# AndrewFileSystem

code/: CMakeLists.txt  README.md  server.config  test.cc  test.txt  uwAFS.proto
code/consistency_tests/: 739p1.env  fs_util.py  test1_clientA.py  test1_clientB.py  test2_clientA.py  test2_clientB.py  test3_clientA.py  test3_clientB.py  test4_clientA.py  test4_clientB.py
code/uwAFS_client/: CMakeLists.txt  cacheManager.h  unreliablefs_ops.c  unreliablefs_ops.h  uwAFS.cc  uwAFS.h  uwAFS_interface.cc  uwAFS_interface.h
code/uwAFS_server/: CMakeLists.txt  server.cc
